--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -1,5 +1,5 @@
-name: Feature Request
-description: Request a feature
+name: "Feature Request"
+description: "Request a feature"
 title: "[Feature request]: "
 labels: ["enhancement"]
 body:
